--- a/_posts/0000-01-02-sin-wave.md
+++ b/_posts/0000-01-02-sin-wave.md
@@ -3,5 +3,5 @@ layout: slide
 title: "Welcome to our second slide!"
 ---
 
-Your text
+This is github sin-wave Slide
 Use the left arrow to go back!
